# haiku-generator

./: Cargo.toml  LICENSE  README.md
src/: haiku_generator.rs  main.rs
