[package]
name = "haiku-generator"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/najaco/haiku-generator"
readme = "README.md"
license = "LICENSE"


[lib]
name = "haiku_generator"
path = "src/haiku_generator.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
