[package]
name = "haiku-generator"
description = "Naive implementation of haiku generation given a list of words"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/najaco/haiku-generator"
readme = "README.md"
license = "MIT"


[lib]
name = "haiku_generator"
path = "src/haiku_generator.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
